--- a/examples/web-app-protection-example/Jenkinsfile
+++ b/examples/web-app-protection-example/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
                 echo "Adding bucket information to backends"
                 for i in `find -name 'backend.tf'`; do sed -r -i "s/_BUCKET_GCS_/${_STATE_BUCKET_NAME}/" $i; done
                 chmod +x ${WORKSPACE}/build/script.sh
+                cd ${WORKSPACE}/examples/web-app-protection-example
                 '''
             }
         }
