--- a/examples/web-app-protection-example/Jenkinsfile
+++ b/examples/web-app-protection-example/Jenkinsfile
@@ -8,6 +8,8 @@ pipeline {
         _TF_SA_EMAIL="sa-terraform-cicd@cicd-prj-bbee.iam.gserviceaccount.com"
         _STATE_BUCKET_NAME="cicd-prj-tfstate-bkt-1rd3"
         _PROJECT_ID="cicd-prj-bbee"
+
+        EXAMPLE_BUILD="web-app-protection-example"
     }
 
     stages{
@@ -19,7 +21,6 @@ pipeline {
                 echo "Adding bucket information to backends"
                 for i in `find -name 'backend.tf'`; do sed -r -i "s/_BUCKET_GCS_/${_STATE_BUCKET_NAME}/" $i; done
                 chmod +x ${WORKSPACE}/build/script.sh
-                cd ${WORKSPACE}/examples/web-app-protection-example
                 '''
             }
         }
@@ -36,6 +37,7 @@ pipeline {
             steps {
                 sh '''
                 export GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=${_TF_SA_EMAIL}
+                cd ${WORKSPACE}/examples/${EXAMPLE_BUILD}
                 sudo ${WORKSPACE}/build/script.sh plan_validate_all ${BRANCH_NAME} ${WORKSPACE}/${_POLICY_REPO} ${_PROJECT_ID}
                 '''
             }
@@ -51,6 +53,7 @@ pipeline {
             steps {
                 sh '''
                 export GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=${_TF_SA_EMAIL}
+                cd ${WORKSPACE}/examples/${EXAMPLE_BUILD}
                 ${WORKSPACE}/build/script.sh init $BRANCH_NAME
                 '''
             }
@@ -66,6 +69,7 @@ pipeline {
             steps {
                 sh '''
                 export GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=${_TF_SA_EMAIL}
+                cd ${WORKSPACE}/examples/${EXAMPLE_BUILD}
                 ${WORKSPACE}/build/script.sh plan $BRANCH_NAME
                 '''
             }
@@ -81,6 +85,7 @@ pipeline {
             steps {
                 sh '''
                 export GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=${_TF_SA_EMAIL}
+                cd ${WORKSPACE}/examples/${EXAMPLE_BUILD}
                 ${WORKSPACE}/build/script.sh validate ${BRANCH_NAME} ${WORKSPACE}/${_POLICY_REPO} ${_PROJECT_ID}
                 '''
             }
@@ -96,6 +101,7 @@ pipeline {
             steps {
                 sh '''
                 export GOOGLE_IMPERSONATE_SERVICE_ACCOUNT=${_TF_SA_EMAIL}
+                cd ${WORKSPACE}/examples/${EXAMPLE_BUILD}
                 ${WORKSPACE}/build/script.sh apply $BRANCH_NAME
                 '''
             }
