--- a/examples/web-app-protection-example/Jenkinsfile
+++ b/examples/web-app-protection-example/Jenkinsfile
@@ -8,8 +8,10 @@ pipeline {
         _TF_SA_EMAIL="sa-terraform-cicd@cicd-prj-bbee.iam.gserviceaccount.com"
         _STATE_BUCKET_NAME="cicd-prj-tfstate-bkt-1rd3"
         _PROJECT_ID="cicd-prj-bbee"
+        _POLICY_REPO="CLOUDSOURCE"
 
         EXAMPLE_BUILD="web-app-protection-example"
+        _GCLOUD_PATH=/var/lib/jenkins/plugins/google-cloud-sdk/bin
     }
 
     stages{
@@ -17,7 +19,7 @@ pipeline {
             steps{
                 sh '''
                 echo "Setting up gcloud for impersonation"
-                gcloud config set auth/impersonate_service_account ${_TF_SA_EMAIL}
+                ${_GCLOUD_PATH}/gcloud config set auth/impersonate_service_account ${_TF_SA_EMAIL}
                 echo "Adding bucket information to backends"
                 for i in `find -name 'backend.tf'`; do sed -r -i "s/_BUCKET_GCS_/${_STATE_BUCKET_NAME}/" $i; done
                 chmod +x ${WORKSPACE}/build/script.sh
