--- a/examples/web-app-protection-example/Jenkinsfile
+++ b/examples/web-app-protection-example/Jenkinsfile
@@ -26,6 +26,7 @@ pipeline {
                 '''
             }
         }
+        /* !TODO: Precisa de alguns testes ainda
         stage("Terraform Plan and validate") {
             when {
               not {
@@ -43,7 +44,7 @@ pipeline {
                 sudo ${WORKSPACE}/build/script.sh plan_validate_all ${BRANCH_NAME} ${WORKSPACE}/${_POLICY_REPO} ${_PROJECT_ID}
                 '''
             }
-        }
+        } */
         stage('TF init') {
             when {
               anyOf {
