--- a/examples/web-app-protection-example/Jenkinsfile
+++ b/examples/web-app-protection-example/Jenkinsfile
@@ -77,6 +77,7 @@ pipeline {
                 '''
             }
         }
+        /* !TODO: Precisa de testes ainda.
         stage('TF validate') {
             when {
               anyOf {
@@ -92,7 +93,7 @@ pipeline {
                 ${WORKSPACE}/build/script.sh validate ${BRANCH_NAME} ${WORKSPACE}/${_POLICY_REPO} ${_PROJECT_ID}
                 '''
             }
-        }
+        } */
         stage('TF apply') {
             when {
               anyOf {
