--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ crash.log
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
-#**/*.tfvars
+**/*.tfvars
 
 credentials.json
 
