--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,6 +16,9 @@
      "stabilityDays":0
   },
   "separateMajorMinor":false,
+  "constraints": {
+    "go": "1.18"
+  },
   "packageRules": [
     {
       "matchPaths": ["examples/**", "test/**", ".github/**"],
@@ -35,13 +38,30 @@
       "postUpdateOptions": ["gomodTidy"]
     },
     {
-      "matchPackageNames": ["go"],
+      "matchDatasources": ["golang-version"],
+      "rangeStrategy": "bump",
       "allowedVersions": "<1.19.0",
       "postUpdateOptions": ["gomodTidy"]
     },
     {
       "matchPackageNames": ["google", "google-beta"],
       "groupName": "terraform googles"
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)Makefile$"],
+      "matchStrings": ["DOCKER_TAG_VERSION_DEVELOPER_TOOLS := (?<currentValue>.*?)\\n"],
+      "datasourceTemplate": "docker",
+      "registryUrlTemplate": "https://gcr.io/cloud-foundation-cicd",
+      "depNameTemplate": "cft/developer-tools"
+    },
+    {
+      "fileMatch": ["(^|/)build/(int|lint)\\.cloudbuild\\.yaml$"],
+      "matchStrings": ["  _DOCKER_TAG_VERSION_DEVELOPER_TOOLS: '(?<currentValue>.*?)'\\n"],
+      "datasourceTemplate": "docker",
+      "registryUrlTemplate": "https://gcr.io/cloud-foundation-cicd",
+      "depNameTemplate": "cft/developer-tools"
     }
   ]
 }
